--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about" id="about">
+<section class="about _anim-items _anim-no-hide" id="about">
     <div class="container">
         <h2 class="about-title title">Teacher</h2>
         <div class="about-tab">
@@ -22,7 +22,7 @@
                 <img class="about-picture" src="#" alt="Преподаватель Елена Морева Teacher  Elena Moreva">
             </picture>
 
-            <div class="about-tumb _anim-items _anim-no-hide">
+            <div class="about-tumb">
                 <h3 class="about-name title">Elena Moreva</h3>
                 <ul class="about-list list">
                     <li class="about-item">
