--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -2,7 +2,7 @@
   <div class="program-container container">
     <h2 class="program-title">Our program</h2>
     <ul class="program-list list">
-      <li class="program-item">
+      <li class="program-item _anim-items _anim-no-hide">
         <h3 class="program-item-title">1 semester</h3>
         <ul class="list program-study-block">
           <li class="program-study-block-item">
@@ -21,7 +21,7 @@
           </li>
         </ul>
       </li>
-      <li class="program-item">
+      <li class="program-item _anim-items _anim-no-hide">
         <h3 class="program-item-title">2 semester</h3>
         <ul class="list program-study-block">
           <li class="program-study-block-item">
@@ -42,7 +42,7 @@
           </li>
         </ul>
       </li>
-      <li class="program-item">
+      <li class="program-item _anim-items _anim-no-hide">
         <h3 class="program-item-title">3 semester</h3>
         <ul class="list program-study-block">
           <li class="program-study-block-item">
@@ -69,7 +69,7 @@
           </li>
         </ul>
       </li>
-      <li class="program-item">
+      <li class="program-item _anim-items _anim-no-hide">
         <h3 class="program-item-title">4 semester</h3>
         <ul class="list program-study-block">
           <li class="program-study-block-item">
@@ -98,7 +98,7 @@
           </li>
         </ul>
       </li>
-      <li class="program-item">
+      <li class="program-item _anim-items _anim-no-hide">
         <h3 class="program-item-title">5 semester</h3>
         <ul class="list program-study-block program-study-block-mod">
           <li class="program-study-block-item">
