Add scroll button

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -39,4 +39,7 @@
   <div class="copyright">
     <p class="container copyright-text">@ All rights reserved, 2019</p>
   </div>
+  </div>
+  <button class="back-to-top" id="buttonUp" type="button">
+  </button>
 </footer>
