--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,6 +12,7 @@
 @import './components/backdrop';
 @import './components/modal';
 @import './components/slider';
+@import './components/scroll-button';
 
 @import './layout/header';
 @import './layout/hero';
