--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -1,235 +1,236 @@
 .button-mob-menu {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 260px;
-    height: 48px;
-    overflow: hidden;
-    border: 2px solid $accent-color;
-    font-family: "Montserrat";
-    font-size: 14px;
-    font-weight: 700;
-    white-space: nowrap;
-    text-transform: uppercase;
-    line-height: 1.2;
-    background-color: transparent;
-    color: $accent-color;
-    &:focus,
-    &:hover {
-        color: #fcf0e8;
-        background-color: #ff6b0936;
-        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    }
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 260px;
+  height: 48px;
+  overflow: hidden;
+  border: 2px solid $accent-color;
+  font-family: 'Montserrat';
+  font-size: 14px;
+  font-weight: 700;
+  white-space: nowrap;
+  text-transform: uppercase;
+  line-height: 1.2;
+  background-color: transparent;
+  color: $accent-color;
+  cursor: pointer;
+  &:focus,
+  &:hover {
+    color: #fcf0e8;
+    background-color: #ff6b0936;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  }
 }
 .button-heder-menu {
-    width: 260px;
-    height: 48px;
-    overflow: hidden;
-    border: 2px solid $accent-color;
-    font-family: "Montserrat";
-    font-size: 14px;
-    white-space: nowrap;
-    font-weight: 700;
-    text-transform: uppercase;
-    line-height: 1.2;
-    letter-spacing: 0.12em;
+  width: 260px;
+  height: 48px;
+  overflow: hidden;
+  border: 2px solid $accent-color;
+  font-family: 'Montserrat';
+  font-size: 14px;
+  white-space: nowrap;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 1.2;
+  letter-spacing: 0.12em;
 
-    background-color: transparent;
-    color: $accent-color;
-    transition: 0.5s;
-    cursor: pointer;
+  background-color: transparent;
+  color: $accent-color;
+  transition: 0.5s;
+  cursor: pointer;
 
-    &:focus,
-    &:hover {
-        color: $primary-white-color;
-        background-color: $accent-color;
-        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    }
+  &:focus,
+  &:hover {
+    color: $primary-white-color;
+    background-color: $accent-color;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  }
 }
 @media screen and (max-width: 767px) {
-    .button-heder-menu {
-        display: none;
-    }
+  .button-heder-menu {
+    display: none;
+  }
 }
 
 @mixin button($bcolor, $url, $x1, $y1, $bor, $col) {
-    background: $bcolor;
-    -webkit-mask: url($url);
-    mask: url($url);
-    -webkit-mask-size: $x1 $y1;
-    mask-size: $x1 $y1;
-    border: $bor;
-    color: $col;
+  background: $bcolor;
+  -webkit-mask: url($url);
+  mask: url($url);
+  -webkit-mask-size: $x1 $y1;
+  mask-size: $x1 $y1;
+  border: $bor;
+  color: $col;
 }
 
 .btn-wrapper {
-    position: relative;
-    width: 260px;
-    height: 48px;
-    margin-left: auto;
-    margin-right: auto;
-    overflow: hidden;
-    border: none;
-    border: 2px solid $accent-color;
+  position: relative;
+  width: 260px;
+  height: 48px;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: hidden;
+  border: none;
+  border: 2px solid $accent-color;
 
-    transition: 0.5s;
+  transition: 0.5s;
 
-    @media screen and (min-width: 1366px) {
-        width: 354px;
-        height: 70px;
-    }
+  @media screen and (min-width: 1366px) {
+    width: 354px;
+    height: 70px;
+  }
 }
 
 .wrapper-btn-heder {
-    position: relative;
-    width: 260px;
-    height: 48px;
-    border: 2px solid $accent-color;
-    @media screen and (max-width: 767px) {
-        display: none;
-    }
-    @media screen and (min-width: 1366px) {
-        width: 354px;
-        height: 70px;
-    }
+  position: relative;
+  width: 260px;
+  height: 48px;
+  border: 2px solid $accent-color;
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+  @media screen and (min-width: 1366px) {
+    width: 354px;
+    height: 70px;
+  }
 }
 
 .button {
-    padding: 15px 5px;
-    width: 100%;
-    height: 100%;
-    font-family: "Montserrat";
-    font-weight: 700;
-    font-size: 12px;
-    white-space: nowrap;
-    text-transform: uppercase;
-    line-height: 1.2;
+  padding: 15px 5px;
+  width: 100%;
+  height: 100%;
+  font-family: 'Montserrat';
+  font-weight: 700;
+  font-size: 12px;
+  white-space: nowrap;
+  text-transform: uppercase;
+  line-height: 1.2;
+  letter-spacing: 0.08em;
+
+  @include button(
+    $accent-color,
+    'https://raw.githubusercontent.com/robin-dela/css-mask-animation/master/img/urban-sprite.png',
+    3000%,
+    100%,
+    none,
+    #fff
+  );
+  cursor: pointer;
+  -webkit-animation: ani2 0.7s steps(29) forwards;
+  animation: ani2 0.7s steps(29) forwards;
+
+  &:hover {
+    -webkit-animation: ani 0.7s steps(29) forwards;
+    animation: ani 0.7s steps(29) forwards;
+  }
+
+  @media screen and (min-width: 1366px) {
+    padding: 25px 2px;
+    font-size: 14px;
     letter-spacing: 0.08em;
-
-    @include button(
-        $accent-color,
-        "https://raw.githubusercontent.com/robin-dela/css-mask-animation/master/img/urban-sprite.png",
-        3000%,
-        100%,
-        none,
-        #fff
-    );
-    cursor: pointer;
-    -webkit-animation: ani2 0.7s steps(29) forwards;
-    animation: ani2 0.7s steps(29) forwards;
-
-    &:hover {
-        -webkit-animation: ani 0.7s steps(29) forwards;
-        animation: ani 0.7s steps(29) forwards;
-    }
-
-    @media screen and (min-width: 1366px) {
-        padding: 25px 2px;
-        font-size: 14px;
-        letter-spacing: 0.08em;
-    }
+  }
 }
 
 .button-text-mask {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 101%;
-    // height: 100%;
-    font-weight: 700;
-    white-space: nowrap;
-    text-transform: uppercase;
-    line-height: 1.2;
-    letter-spacing: 0.08em;
-    color: $primary-white-color;
-    overflow: hidden;
-    @media screen and (min-width: 1366px) {
-        padding: 25px 2px;
-        font-size: 14px;
-    }
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 101%;
+  // height: 100%;
+  font-weight: 700;
+  white-space: nowrap;
+  text-transform: uppercase;
+  line-height: 1.2;
+  letter-spacing: 0.08em;
+  color: $primary-white-color;
+  overflow: hidden;
+  @media screen and (min-width: 1366px) {
+    padding: 25px 2px;
+    font-size: 14px;
+  }
 }
 
 .btn-text-mask {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 101%;
-    // height: 100%;
-    text-align: center;
-    font-size: 14px;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 0.12em;
-    color: $accent-color;
-    overflow: hidden;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 101%;
+  // height: 100%;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.12em;
+  color: $accent-color;
+  overflow: hidden;
 }
 
 .color-hover-hero {
-    text-align: center;
-    color: $accent-color;
+  text-align: center;
+  color: $accent-color;
 }
 
 .button-heder {
-    border: 2px solid $accent-color;
-    font-style: 14px;
-    background-color: transparent;
-    color: $accent-color;
+  border: 2px solid $accent-color;
+  font-style: 14px;
+  background-color: transparent;
+  color: $accent-color;
 
-    @media screen and (min-width: 1366px) {
-        width: 336px;
-    }
+  @media screen and (min-width: 1366px) {
+    width: 336px;
+  }
 }
 
 @-webkit-keyframes ani {
-    from {
-        -webkit-mask-position: 0 0;
-        mask-position: 0 0;
-    }
+  from {
+    -webkit-mask-position: 0 0;
+    mask-position: 0 0;
+  }
 
-    to {
-        -webkit-mask-position: 100% 0;
-        mask-position: 100% 0;
-    }
+  to {
+    -webkit-mask-position: 100% 0;
+    mask-position: 100% 0;
+  }
 }
 
 @keyframes ani {
-    from {
-        -webkit-mask-position: 0 0;
-        mask-position: 0 0;
-    }
+  from {
+    -webkit-mask-position: 0 0;
+    mask-position: 0 0;
+  }
 
-    to {
-        -webkit-mask-position: 100% 0;
-        mask-position: 100% 0;
-    }
+  to {
+    -webkit-mask-position: 100% 0;
+    mask-position: 100% 0;
+  }
 }
 
 @-webkit-keyframes ani2 {
-    from {
-        -webkit-mask-position: 100% 0;
-        mask-position: 100% 0;
-    }
+  from {
+    -webkit-mask-position: 100% 0;
+    mask-position: 100% 0;
+  }
 
-    to {
-        -webkit-mask-position: 0 0;
-        mask-position: 0 0;
-    }
+  to {
+    -webkit-mask-position: 0 0;
+    mask-position: 0 0;
+  }
 }
 
 @keyframes ani2 {
-    from {
-        -webkit-mask-position: 100% 0;
-        mask-position: 100% 0;
-    }
+  from {
+    -webkit-mask-position: 100% 0;
+    mask-position: 100% 0;
+  }
 
-    to {
-        -webkit-mask-position: 0 0;
-        mask-position: 0 0;
-    }
+  to {
+    -webkit-mask-position: 0 0;
+    mask-position: 0 0;
+  }
 }
 
 a {
-    color: #00ff95;
+  color: #00ff95;
 }
 
 // .button {
