--- a/src/sass/layout/_program.scss
+++ b/src/sass/layout/_program.scss
@@ -197,7 +197,7 @@
       border-top: 1px solid $primary-white-color;
       transform: translateY(156px);
       width: 100vw;
-      z-index: 1;
+      // z-index: 1;
     }
   }
   .program-container {
